--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --bg: #f1f1f0;
   --cold-gray: #91989f; /*ginnezumi*/
-  --text-main: #574c57;
+  --text-main: #72636e;
   --text-soft: #566c73; /*ainezumi*/
   --dusty-rose: #dc9fb4; /*nadeshiko*/
 }
