--- a/style.css
+++ b/style.css
@@ -51,9 +51,14 @@ body {
   backdrop-filter: blur(6px);
 }
 
-.nav-left,
-.nav-right {
+.nav-left {
   font-size: 24px;
+  letter-spacing: -1x;
+  color: var(--text-soft);
+}
+
+.nav-right {
+  font-size: 14px;
   letter-spacing: -1x;
   color: var(--text-soft);
 }
