--- a/style.css
+++ b/style.css
@@ -376,13 +376,13 @@ body {
 .book-frame::before {
   content: "";
   position: absolute;
-  inset: -18px;
+  inset: -5px;
 
   background:
-    radial-gradient(circle at 10px 10px, transparent 8px, #947a6d 8px),
-    radial-gradient(circle at 90% 20px, transparent 5px, #947a6d 6px),
-    radial-gradient(circle at 30% 95%, transparent 6px, #947a6d 7px),
-    radial-gradient(circle at 80% 90%, transparent 5px, #947a6d 6px);
+    radial-gradient(circle at 10px 10px, transparent 8px, #fcfaf2 8px),
+    radial-gradient(circle at 90% 20px, transparent 5px, #fcfaf2 6px),
+    radial-gradient(circle at 30% 95%, transparent 6px, #fcfaf2 7px),
+    radial-gradient(circle at 80% 90%, transparent 5px, #fcfaf2 6px);
 
   background-repeat: repeat;
   background-size: 40px 40px;
@@ -394,9 +394,9 @@ body {
 .book-frame::after {
   content: "";
   position: absolute;
-  inset: 6px -6px -6px 6px;
+  inset: 6px -10px -10px 6px;
 
-  background: #554236;
+  background: #fcfaf2;
   border: 1px solid rgba(80,80,80,0.12);
   z-index: -2;
 }
