--- a/style.css
+++ b/style.css
@@ -397,7 +397,7 @@ body {
   position: absolute;
   inset: 8px -18px -18px 10px;
 
-  background: #fcfaf2;
+  background: #877f6c;
   border: 1px solid rgba(80,80,80,0.12);
   z-index: -2;
 }
