--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --bg: #f1f1f0;
+  --bg: #3a3226;
   --cold-gray: #91989f; /*ginnezumi*/
   --text-main: #72636e;
   --text-soft: #566c73; /*ainezumi*/
