--- a/style.css
+++ b/style.css
@@ -224,10 +224,9 @@ body {
 }
 
 .menu-after {
-  margin: 48px auto 0;
+  margin: 48px 0 0 auto;
   max-width: 400px;
   text-align: right;
-  justify-self: end;
 }
 
 .menu-after .monologue {
