--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 
 /* ---------------- NAV ---------------- */
 .navbar {
-  position: sticky;
+  position: fixed;
   top: 0;
   max-width: 1600px;
   margin: 0 auto;
