--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 
 /* ---------------- NAV (STABLE) ---------------- */
 .navbar {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
